--- a/packages/frontend/src/scss/index.scss
+++ b/packages/frontend/src/scss/index.scss
@@ -13,6 +13,24 @@
   }
 }
 
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: none;
+  -webkit-text-fill-color: none;
+  box-shadow:0 0 0 30px #fafafa inset;
+  -webkit-box-shadow: 0 0 0 30px #fafafa inset;
+  transition: background-color none;
+  background-color: transparent;
+}
+
 html,
 body {
   height: 100%;
