--- a/packages/frontend/src/pages/calendar/calendar.scss
+++ b/packages/frontend/src/pages/calendar/calendar.scss
@@ -4,16 +4,8 @@
 @import '~@fullcalendar/daygrid/main.css';
 @import '~@fullcalendar/timegrid/main.css';
 
-.demo-app {
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 14px;
-}
-
-.demo-app-top {
-  margin: 0 0 3em;
-}
-
 .calendar {
   margin: 0 auto;
+  margin-top: 10px;
   max-width: 900px;
 }
