--- a/packages/frontend/src/components/modal/modal.scss
+++ b/packages/frontend/src/components/modal/modal.scss
@@ -27,8 +27,8 @@
   .modal__wrapper {
     position: relative;
     box-sizing: border-box;
-    min-width: 90%;
-    min-height: 60%;
+    width: 90%;
+    height: 60%;
     margin: 0;
     padding: 0;
     display: flex;
