--- a/packages/frontend/src/components/navbar/sidenav/side-nav.scss
+++ b/packages/frontend/src/components/navbar/sidenav/side-nav.scss
@@ -74,18 +74,8 @@
         color: #fff;
       }
 
-      .sidenav__list {
-        height: 100%;
+      .sidenav__link {
         display: flex;
-        flex-direction: column;
-
-        .sidenav__list-item {
-          text-decoration: none;
-          list-style: none;
-          margin: 20px 0;
-          color: #fff;
-          cursor: pointer;
-        }
       }
     }
   }
