--- a/packages/frontend/src/components/modal/bodies/owner/base-event-owner.scss
+++ b/packages/frontend/src/components/modal/bodies/owner/base-event-owner.scss
@@ -1,3 +1,11 @@
+.base-event-owner__container {
+  height: 90%;
+  min-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 .base-event-owner__buttons {
   position: absolute;
   bottom: 0;
