[feat] new event modal steps

--- a/packages/frontend/src/components/modal/modal.scss
+++ b/packages/frontend/src/components/modal/modal.scss
@@ -43,6 +43,7 @@
     .modal__close-container {
       position: relative;
       width: 100%;
+      z-index: 9999;
 
       .modal__close-icon {
         cursor: pointer;
