--- a/packages/frontend/src/components/modal/modal-content.scss
+++ b/packages/frontend/src/components/modal/modal-content.scss
@@ -1,10 +1,4 @@
-.noscroll {
-  overflow: hidden;
-}
-
 .modal__content_container {
-  position: relative;
-  align-content: stretch;
   border: none;
   box-shadow: none;
   justify-content: flex-start;
@@ -12,9 +6,9 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  width: auto;
+  width: 100%;
   height: 100%;
-  max-width: 700px;
+  padding: 10px 35px;
 
   .modal__content_wrapper {
     display: flex;
