--- a/packages/frontend/src/components/date-time-picker/date-time-picker.scss
+++ b/packages/frontend/src/components/date-time-picker/date-time-picker.scss
@@ -17,6 +17,7 @@
         .form-control {
           border: none;
           font-size: 14px;
+          background: transparent;
         }
       }
     }
