--- a/packages/frontend/src/components/modal/bodies/owner/new-event/new-event.scss
+++ b/packages/frontend/src/components/modal/bodies/owner/new-event/new-event.scss
@@ -4,6 +4,7 @@
   position: relative;
 
   @import './views/options/options.scss';
+  @import './views/prev-event/prev-event.scss';
 }
 
 @keyframes pressed {
