--- a/packages/frontend/src/components/calendar/calendar.scss
+++ b/packages/frontend/src/components/calendar/calendar.scss
@@ -67,7 +67,7 @@
                     }
 
                     &.event-today {
-                      background: #4caf50;
+                      background-color: #021a92;
                       padding: 0;
                       border-radius: 4px;
                     }
