--- a/packages/frontend/src/components/modal/modal.scss
+++ b/packages/frontend/src/components/modal/modal.scss
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 11px;
     background-color: rgb(255, 255, 255);
     -webkit-box-align: center;
     -webkit-box-shadow: 2px 10px 35px -4px rgba(0, 0, 0, 0.75);
