--- a/packages/frontend/src/components/grid/grid.scss
+++ b/packages/frontend/src/components/grid/grid.scss
@@ -1,16 +1,21 @@
 .grid__container {
   .cell {
     text-align: center;
+    max-width: 214px;
     font-size: 14px;
+    text-overflow: clip;
 
     &--grid-header {
       font-size: 16px;
       background-color: #5393ff;
+
+      * { 
+        color: black;
+      }
     }
 
     &--grid-body {
       width: 80px;
-      max-width: 214px;
     }
   }
 }
