--- a/packages/frontend/src/components/modal/bodies/owner/new-event/views/options/options.scss
+++ b/packages/frontend/src/components/modal/bodies/owner/new-event/views/options/options.scss
@@ -5,8 +5,10 @@
   height: 100%;
 
   .previous-events__card-container {
-    display: grid;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     height: 100%;
     width: 100%;
     position: relative;
@@ -25,8 +27,10 @@
   }
 
   .new-event__card-container {
-    display: grid;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     height: 100%;
     width: 100%;
     position: relative;
