[feat: new workout modal form] adding more functionality

--- a/packages/frontend/src/components/grid/grid.scss
+++ b/packages/frontend/src/components/grid/grid.scss
@@ -17,6 +17,15 @@
       &.empty {
         width: 30px;
       }
+
+      .value {
+        height: auto;
+        
+        &::before {
+          content: '';
+          width: 12px;
+        }
+      }
     }
 
     &--grid-body {
