--- a/packages/frontend/src/components/grid/grid.scss
+++ b/packages/frontend/src/components/grid/grid.scss
@@ -20,12 +20,21 @@
 
       .value {
         height: auto;
-        
+
         &::before {
           content: '';
           width: 12px;
         }
       }
+
+      .shake {
+        animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+      }
+
+      @import 'scss/animations/shake.scss';
     }
 
     &--grid-body {
