--- a/packages/frontend/src/components/modal/bodies/owner/new-event/new-event.scss
+++ b/packages/frontend/src/components/modal/bodies/owner/new-event/new-event.scss
@@ -3,8 +3,16 @@
   width: 100%;
   position: relative;
 
+  .form__container {
+    height: 90%;
+    min-width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  
   @import './views/options/options.scss';
-  @import './views/prev-event/prev-event.scss';
+  // @import './views/prev-event/prev-event.scss';
 }
 
 @keyframes pressed {
