--- a/packages/frontend/src/scss/index.scss
+++ b/packages/frontend/src/scss/index.scss
@@ -1,90 +1,26 @@
-* {
-  outline: none;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.app--container {
+  height: calc(100vh - 0px);
+  display: flex;
+  flex-direction: row;
+  margin-left: 50px;
+  padding-left: 20px;
+  margin-top: 0px;
 
-  &:focus {
-    outline: none;
+  &.compressable-container {
+    transition: padding-left 400ms cubic-bezier(0.2, 0, 0, 1) 0s;
+
+    &.compressed {
+      padding-left: 170px;
+    }
+  }
+
+  .screen--container {
+    padding: 8px 16px;
+    min-width: 100%;
+    min-height: 100%;
   }
 }
 
-/* Change Autocomplete styles in Chrome*/
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  border: none;
-  -webkit-text-fill-color: none;
-  box-shadow:0 0 0 30px #fafafa inset;
-  -webkit-box-shadow: 0 0 0 30px #fafafa inset;
-  transition: background-color none;
-  background-color: transparent;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h1,
-h2,
-h4,
-h5 {
-  margin: 0;
-}
-
-h1 {
-  font-family: 'Montserrat-Bold', sans-serif;
-}
-
-h3 {
-  font-family: 'Montserrat-medium', sans-serif;
-}
-
-h4 {
-  font-family: Poppins, sans-serif;
-  font-weight: 200;
-}
-
-h5 {
-  font-family: Poppins, sans-serif;
-}
-
-a,
-div {
-  font-family: Poppins, sans-serif;
-}
-
-a {
-  cursor: pointer;
-  text-decoration: none;
-  color: inherit;
-  text-decoration: none;
-}
-
-p {
-  font-family: sans-serif;
-  font-size: 14px;
-  margin: 0;
-}
-
-i,
-svg,
-button {
-  cursor: pointer;
-}
+// @import './style_guide/font.scss';
+@import './style_guide/colors.scss';
+@import './style_guide/elements.scss';
