--- a/packages/frontend/src/scss/style_guide/colors.scss
+++ b/packages/frontend/src/scss/style_guide/colors.scss
@@ -18,6 +18,7 @@
   --yellow-70: #fac234;
   --orange-60: #f39747;
   --red-70: #de423e;
+  --navy-50: #2a394b;
   --navy-90: #1f2a37;
   --neon-blue: #22d3ee;
   --neon-pink: #ec4899;
@@ -28,7 +29,7 @@
   --black: #000000;
   --dark: #47495a;
   --lightGrey: #bdcad2;
-  --lighterGrey: #dee4e8;
+  --lighterGrey: #ddd;
   --slate: #617986;
   --offWhite: #f8f9fa;
   --yellow: #ddbf13;
