--- a/packages/frontend/src/scss/style_guide/font.scss
+++ b/packages/frontend/src/scss/style_guide/font.scss
@@ -2,3 +2,8 @@
   font-family: 'Inter-Roman';
   src: local('Inter-Roman'), url('../../public/fonts/InterVar/Inter-roman.woff') format('woff');
 }
+
+@font-face {
+  font-family: 'Muli';
+  src: local('Muli'), url('../../public/fonts/Muli/muli.regular.woff') format('woff');
+}
