--- a/packages/frontend/src/components/navigation/nav.scss
+++ b/packages/frontend/src/components/navigation/nav.scss
@@ -54,6 +54,10 @@
           &:hover {
             background-color: var(--navy-90);
             color: var(--neutral-10);
+
+            path {
+              fill: var(--neutral-10);
+            }
           }
         }
       }
