--- a/packages/frontend/src/scss/style_guide/elements.scss
+++ b/packages/frontend/src/scss/style_guide/elements.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Inter-Roman', sans-serif;
+  font-family: 'Muli', sans-serif;
   outline: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
@@ -44,4 +44,60 @@ i,
 svg,
 button {
   cursor: pointer;
+  align-self: center;
+  display: grid;
+  font-size: inherit;
+}
+
+table,
+tr,
+th,
+thead,
+tbody {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-weight: inherit;
+  font-stretch: inherit;
+  line-height: inherit;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+
+tr {
+  display: table-row;
+}
+
+button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.4em 0.65em;
+  line-height: 1.5;
+  border-radius: 0.25em;
+
+  &:disabled {
+    cursor: unset;
+  }
+}
+
+.button-primary {
+  color: var(--pure-white);
+  background-color: var(--navy-50);
+  border-color: var(--navy-50);
+
+  &:hover {
+    background-color: var(--navy-90);
+    border-color: var(--navy-90);
+  }
+
+  &.button-active {
+    background-color: var(--navy-90);
+  }
 }
