building out calendar

--- a/packages/frontend/src/pages/calendar_page/calendar.scss
+++ b/packages/frontend/src/pages/calendar_page/calendar.scss
@@ -1,4 +1,4 @@
-$border-color: var(--lighterGrey);
+$border-color: var(--color-primary-300);
 $border-solid-style: 1px solid $border-color;
 $border-dashed-style: 1px dashed $border-color;
 
