--- a/packages/frontend/src/scss/style_guide/colors.scss
+++ b/packages/frontend/src/scss/style_guide/colors.scss
@@ -1,5 +1,13 @@
 // PLATFORM COLORS
 :root {
+  --theme-a1: #000000;
+  --theme-a2: #52057b;
+  --theme-a3: #892cdc;
+  --theme-a4: #bc6ff1;
+  --theme-b1: #162447;
+  --theme-b2: #1f4068;
+  --theme-b3: #1b1b2f;
+  --theme-b4: #e43f5a;
   --pure-white: #fff;
   --blue-20: #c0e2ff;
   --blue-40: #69b6f5;
@@ -11,51 +19,44 @@
   --neutral-10: #f4f5f7;
   --neutral-30: #afb9cb;
   --neutral-60: #5c697f;
-  --purple-30: #9a92ff;
-  --purple-50: #6d62e9;
-  --purple-60: #5e21d2;
   --yellow-40: #fcdc79;
   --yellow-70: #fac234;
   --orange-60: #f39747;
   --red-70: #de423e;
+  --navy-40: #2c3e50;
   --navy-50: #2a394b;
   --navy-90: #1f2a37;
-  --neon-blue: #22d3ee;
-  --neon-pink: #ec4899;
-  --main: #3a4c56;
+  --dark-primary: #1f1b24;
   --transparent: transparent;
   --transparentOffWhite: rgba(248, 249, 250, 0.2);
-  --transparentSecondary: rgba(19, 202, 221, 0.2);
   --black: #000000;
   --dark: #47495a;
   --lightGrey: #bdcad2;
   --lighterGrey: #ddd;
-  --slate: #617986;
-  --offWhite: #f8f9fa;
-  --yellow: #ddbf13;
-  --alto: #d8d8d8;
-  --wildSand: #f4f4f4;
-  --seaGreen: #4cf58b;
-  --space: #233539;
-  --lightBlack: #555459;
-  --grey: #9e9ea6;
-  --darkGrey: #617986;
-  --placeholderGrey: #95a1a8;
-  --orange: #f58b4c;
-  --orangeLight: #ff8b6f;
-  --lightBlue: #9bd0f0;
-  --dodgerBlue: #4da1ff;
-  --blue: #2db4f4;
-  --darkBlue: #6a9fbd;
-  --aqua: #89e4ee;
-  --shady: #979797;
-  --affair: #75487a;
-  --salad: #4e9473;
-  --alabaster: #fbfbfb;
-  --cement: #917463;
-  --athens: #f9fafb;
-  --manatee: #9a9a9b;
-  --iron: #dadbdc;
-  --cyan: #13cadd;
-  --mud: #913b08;
+  --primary-50: #6202ee;
+  --primary-40: #8023fc;
+  --primary-30: #9d56fb;
+  --primary-20: #bb85fc;
+  --primary-10: #d7b7fd;
+  --secondary-50: #00a298;
+  --secondary-40: #01b3a6;
+  --secondary-30: #00c4b4;
+  --secondary-20: #00dac5;
+  --secondary-10: #71efde;
+  --color-button-text: #fff;
+  --color-primary-100: #dee3ea;
+  --color-primary-200: #b2bdcd;
+  --color-primary-300: #5d7290;
+  --color-primary-600: #323d4d;
+  --color-primary-700-opaque: rgba(36, 44, 55, 0.75);
+  --color-primary-700: #242c37;
+  --color-primary-800: #151a21;
+  --color-primary-900: #0b0e11;
+  --color-secondary-washed-out: #879eed;
+  --color-secondary: #5575e7;
+  --purple-30: #9a92ff;
+  --color-accent-hover: rgba(109, 98, 233, 0.75);
+  --color-accent: #6d62e9;
+  --purple-60: #5e21d2;
+  --color-accent-disabled: #f5bfbf;
 }
