--- a/packages/frontend/src/pages/calendar_page/day_activity.scss
+++ b/packages/frontend/src/pages/calendar_page/day_activity.scss
@@ -3,27 +3,13 @@
   height: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto 1fr;
-
-  .activity-title-wrapper {
-    .title {
-      color: var(--purple-30);
-
-      font-size: 16px;
-    }
-  }
-
-  .activity-notes-wrapper {
-    .notes {
-      color: var(--purple-30);
-    }
-  }
+  grid-template-rows: minmax(50px, auto) minmax(50px, auto) 1fr;
 
   .activity-table-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 16px;
-    margin-top: 16px;
+    margin-top: 24px;
 
     .activity-table {
       table-layout: fixed;
@@ -71,6 +57,76 @@
             }
           }
         }
+      }
+    }
+  }
+
+  &.activity-form-wrapper {
+    .input-wrapper {
+      margin-left: 0;
+      border-bottom: 1px solid var(--color-accent);
+    }
+
+    .activity-title-input-wrapper {
+      width: 30%;
+    }
+
+    .activity-notes-input-wrapper {
+      width: 50%;
+    }
+
+    .activity-table-wrapper {
+      .activity-table {
+        .activity-row {
+          display: table-row;
+
+          .activity-cell {
+            vertical-align: middle;
+
+            .activity-cell-input {
+              width: 100%;
+              height: 100%;
+              background-color: var(--transparent);
+            }
+
+            .activity-schema {
+              .activity-schema-input-wrapper {
+                display: grid;
+                align-items: end;
+                column-gap: 4px;
+                grid-template-columns: 32px 8px 32px 8px 44px;
+
+                .activity-schema-input {
+                  padding: 0 4px;
+                  background-color: var(--transparent);
+                  border-bottom: 1px solid var(--color-accent);
+                }
+
+                .activity-schema-input-spacer {
+                  text-align: center;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &.activity-view-wrapper {
+    * {
+      user-select: none;
+    }
+    .activity-title-wrapper {
+      .title {
+        color: var(--purple-30);
+
+        font-size: 16px;
+      }
+    }
+    .activity-notes-wrapper {
+      .notes {
+        color: var(--purple-30);
       }
     }
   }
