--- a/packages/frontend/src/scss/style_guide/elements.scss
+++ b/packages/frontend/src/scss/style_guide/elements.scss
@@ -88,6 +88,12 @@ button {
   }
 }
 
+input,
+textarea {
+  border: none;
+  resize: none;
+}
+
 .button-primary {
   color: var(--color-primary-100);
   background-color: var(--color-accent);
