shared table for day view

--- a/packages/frontend/src/pages/calendar_page/day_view.scss
+++ b/packages/frontend/src/pages/calendar_page/day_view.scss
@@ -1,7 +1,7 @@
 $paddingLeft: 8px;
 
 &.day-view {
-  height: calc(100vh - 150px);
+  height: calc(100vh - 100px);
 
   .day-view-header,
   .day-view-body {
@@ -38,9 +38,22 @@ $paddingLeft: 8px;
 
     &-cell {
       border-right: $border-solid-style;
+      padding: 0;
 
-      @import './day_activity.scss';
-      @import './create_day_activity.scss';
+      .activity-wrapper {
+        max-height: 560px;
+        overflow-y: scroll;
+        padding: 16px 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: minmax(50px, auto) minmax(50px, auto) 1fr;
+
+        .activity-form-wrapper {
+          @import './activity_form.scss';
+        }
+
+        @import './day_activity.scss';
+      }
     }
   }
 }
