--- a/packages/frontend/src/components/button.scss
+++ b/packages/frontend/src/components/button.scss
@@ -48,6 +48,14 @@
   }
 }
 
+.block-button {
+  border: 1px solid var(--color-accent);
+  background-color: var(--color-accent);
+  &:hover {
+    background-color: var(--color-accent-hover);
+  }
+}
+
 .button-primary {
   color: var(--color-primary-100);
   background-color: var(--color-accent);
