--- a/packages/frontend/src/pages/calendar_page/activity_form.scss
+++ b/packages/frontend/src/pages/calendar_page/activity_form.scss
@@ -49,7 +49,7 @@
           }
 
           .session-button-cell {
-            .add-row-button {
+            .session-button {
               background-color: var(--color-accent);
               margin-right: 25px;
               font-size: 12px;
@@ -57,6 +57,11 @@
               .plus-icon {
                 path {
                   transform: scale(0.7) translateY(-2px) translateX(-5px);
+                }
+              }
+              .minus-icon {
+                line {
+                  transform: translateY(1px);
                 }
               }
             }
