--- a/leg_day/src/pages/calendar_page/day_view.scss
+++ b/leg_day/src/pages/calendar_page/day_view.scss
@@ -60,7 +60,7 @@ $paddingLeft: 8px;
           @import './activity_form.scss';
         }
 
-        @import './day_activity.scss';
+        @import './activity.scss';
       }
     }
   }
