--- a/leg_day/src/scss/index.scss
+++ b/leg_day/src/scss/index.scss
@@ -24,3 +24,4 @@
 @import './style_guide/font.scss';
 @import './style_guide/colors.scss';
 @import './style_guide/elements.scss';
+@import './style_guide/classes.scss';
