--- a/src/components/labeled_input.scss
+++ b/src/components/labeled_input.scss
@@ -1,41 +1,90 @@
 .shared-input-wrapper {
-  border: 0;
-  margin: 8px;
-  padding: 0;
-  position: relative;
-  min-width: 0;
-  padding-top: 15px;
-  vertical-align: top;
+  margin-bottom: 2rem;
+  background-color: var(--field__background);
+  transition: background-color 0.2s ease;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 
-  .shared-input-label {
-    left: 0;
-    top: 18px;
-    padding: 0;
-    line-height: 1;
-    position: absolute;
-    will-change: top, font-size;
-    transition: all 275ms cubic-bezier(0.2, 0, 0, 1) 0s;
-
-    &.shared-input-animated {
-      &-color {
-        color: var(--color-accent);
-      }
-
-      &-shrink {
-        top: 0;
-        font-size: 13px;
-      }
-    }
+  &:hover,
+  &:focus-within {
+    background-color: var(--field__background--hover);
   }
 
   .shared-input {
-    border: none;
-    margin: 0;
-    display: block;
-    width: 100%;
     background: none;
-    box-sizing: content-box;
-    letter-spacing: inherit;
-    -webkit-tap-highlight-color: transparent;
+    width: 100%;
+    padding: 1.8rem 0.5rem 0.6rem 0.2rem;
+    font-size: 1rem;
+    transition: border-color 0.2s ease;
+    caret-color: var(--color-accent);
+
+    &::placeholder {
+      color: rgba(0, 0, 0, 0);
+    }
+  }
+
+  .shared-input__label {
+    display: block;
+    position: relative;
+    max-height: 0;
+    font-weight: 500;
+    pointer-events: none;
+
+    &::before {
+      color: var(--label__color);
+      content: attr(data-content);
+      display: inline-block;
+      filter: blur(0);
+      backface-visibility: hidden;
+      transform-origin: left top;
+      transition: transform 0.2s ease;
+      position: relative;
+    }
+
+    &::after {
+      bottom: 1rem;
+      content: '';
+      height: 0.1rem;
+      position: absolute;
+      transition: transform 180ms cubic-bezier(0.4, 0, 0.2, 1),
+        opacity 180ms cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s ease;
+      opacity: 0;
+      left: 0;
+      top: 100%;
+      margin-top: -0.1rem;
+      transform: scale3d(0, 1, 1);
+      width: 100%;
+      background-color: var(--color-accent);
+    }
+
+    .hidden--visually {
+      border: 0;
+      clip: rect(1px 1px 1px 1px);
+      clip: rect(1px, 1px, 1px, 1px);
+      height: 1px;
+      margin: -1px;
+      overflow: hidden;
+      padding: 0;
+      position: absolute;
+      width: 1px;
+    }
+  }
+
+  .shared-input:focus + .shared-input__label::after {
+    transform: scale3d(1, 1, 1);
+    opacity: 1;
+  }
+
+  .shared-input:placeholder-shown + .shared-input__label::before {
+    transform: translate3d(0, -2.2rem, 0) scale3d(1, 1, 1);
+  }
+
+  .shared-input__label::before,
+  .shared-input:focus + .shared-input__label::before {
+    transform: translate3d(0, -3.12rem, 0) scale3d(0.82, 0.82, 1);
+  }
+
+  .shared-input:focus + .shared-input__label::before {
+    color: var(--color-accent);
   }
 }
